cargo-features = ["resolver"]

[workspace]
members = [
	"auction",
	"authority",
	"benchmarking",
	"currencies",
	"gradually-update",
	"oracle",
	"tokens",
	"traits",
	"utilities",
	"vesting",
	"rewards",
	"nft",
]
resolver = "2"

[patch.crates-io]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
